# folderhide

./: .gitignore  README.md  build.bat  pyproject.toml  run.py  run_gui.py
.ScmDBl18/: KNDPy9S4NwBRFWpi
folderhide/: cli.py  core.py  typing.py  utils.py
folderhide/cli/: __init__.py  cli.py  utils.py
folderhide/gui/: __init__.py  hide.py  unhide.py  utils.py  workers.py
