[tool.poetry]
name = "folderhide"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <renrror@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pycryptodome = "^3.10.1"
PyQt6 = "^6.3.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
PyQt5-stubs = "5.15.2"
pyinstaller = "^4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
